--- a/Advanced-Python-BuiltInFunctions-Map-Filter-Reduce-Recursion-Updated-Lecture-checkpoint.ipynb
+++ b/Advanced-Python-BuiltInFunctions-Map-Filter-Reduce-Recursion-Updated-Lecture-checkpoint.ipynb
@@ -865,21 +865,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[' ', 'Argentina', ' ', 'San Diego', '  ', 'Boston', 'New York']\n"
+      "['Argentina', 'San Diego', 'Boston', 'New York']\n"
      ]
     }
    ],
    "source": [
     "places = [\" \",\"Argentina\", \" \", \"San Diego\",\"\",\"  \",\"\",\"Boston\",\"New York\"]\n",
-    "str_list = list(filter(None, places))\n",
-    "print(str_list)"
+    "filtered_places = [place for place in places if place.strip() != \"\"]\n",
+    "print(filtered_places)"
    ]
   },
   {
@@ -960,11 +960,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration(0): 1\n",
+      "Iteration(1): 1\n",
+      "Iteration(2): 2\n",
+      "Iteration(3): 3\n",
+      "Iteration(4): 5\n",
+      "Iteration(5): 8\n"
+     ]
+    }
+   ],
    "source": [
     "def Iteration(xn):\n",
     "    if xn == 0:\n",
@@ -972,7 +985,13 @@
     "    elif xn == 1:\n",
     "        return 1\n",
     "    else:\n",
-    "        return Iteration(xn - 1) + Iteration(xn - 2)\n"
+    "        return Iteration(xn - 1) + Iteration(xn - 2)\n",
+    "    \n",
+    "def fib(n):\n",
+    "    for i in range(n + 1):\n",
+    "        print(\"Iteration({i}): {r}\".format(i=i,r=Iteration(i+1)))\n",
+    "    \n",
+    "fib(5)"
    ]
   }
  ],
